language/move-compiler/tests/move_check/translate/constant_in_spec.exp
error[E02006]: invalid 'const' declaration
  ┌─ tests/move_check/translate/constant_in_spec.move:4:9
  │
4 │         const a:u32 = 1;
  │         ^^^^^^^^^^^^^^^^ 'const' is not allowed in spec members

