language/move-compiler/tests/move_check/translate/constant_in_spec.move

module 0x01::M {
    spec module {
        const a:u32 = 1;
    }
}
